makes dropdown menu links smaller.  Fixes gap in poll and adds icon to breaking news

--- a/sites/all/themes/slac/css/main.css
+++ b/sites/all/themes/slac/css/main.css
@@ -7875,6 +7875,10 @@ ul.tb-megamenu-subnav {
   font-size: 12px;
 }
 
+.tb-megamenu .dropdown-menu {
+  background-clip: border-box !important;
+}
+
 .page-news #page-title {
   display: none;
 }
